# 26s-w2-c2-08

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  compose.yaml  기술명세서.md  기획안.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260710_0001_enable_pgvector.py  20260714_0002_schema_common.py  20260714_0003_users_courses_sessions.py  20260714_0004_auth_and_realtime.py  20260714_0005_materials_recordings_transcripts.py  20260714_0006_questions_and_ai_jobs.py  20260714_0007_clusters_answers.py  20260714_0008_knowledge_summary_chat.py  20260714_0009_idempotency_outbox.py  20260714_0010_schema_constraints.py  20260714_0011_aijob_terminal_states.py  20260714_0012_email_password_auth.py  20260714_0013_live_audio_stream_state.py  20260714_0014_knowledge_rag.py  20260714_0015_answer_text_policy.py  20260714_0016_live_summary_job_input.py  20260714_0017_lifecycle_deletion_ledger.py  20260715_0018_embeddinggemma_768_reindex.py  20260715_0019_final_summary_transcript_input.py  20260715_0020_versioned_final_summary_jobs.py
backend/src/tbd/: __init__.py  __main__.py  app.py  config.py  db.py  main.py
backend/src/tbd/api/: __init__.py  dependencies.py  router.py
backend/src/tbd/auth/: __init__.py  passwords.py  security.py
backend/src/tbd/core/: __init__.py  config.py  crypto.py  errors.py  request_hash.py  request_id.py
backend/src/tbd/db/: __init__.py  session.py
backend/src/tbd/jobs/: __init__.py  clustering_worker.py  kernel.py  material_worker.py  (+5 more)
backend/tests/: conftest.py  fakes.py  test_ai_providers.py  test_answers.py  test_auth_endpoints.py  test_auth_security.py  test_batch_stt.py  test_course_api.py  test_course_archive_cursors.py  test_course_qna_archive.py  test_course_summary_archive.py  test_course_transcript_archive.py  test_database.py  test_embeddinggemma_retrieval.py  test_error_contract.py  test_faster_whisper_stt.py  test_google_oidc.py  test_health.py  test_idempotency_crypto.py  test_job_api.py  test_job_kernel.py  test_knowledge.py  test_lifecycle.py  test_live_audio.py  test_live_audio_protocol.py  test_material_api.py  test_migrations.py  test_oauth_flow.py  test_openapi_contract.py  test_personal_ai.py  test_question_clustering.py  test_question_drafts.py  test_questions.py  test_realtime.py  test_record_api.py  test_record_projection.py  test_recording_api.py  test_recording_transcription_deadline.py  test_schema_spine.py  test_session_cursors.py  (+3 more)
(+370 files in other folders)
