[project]
name = "goal-backend"
version = "0.1.0"
description = "Backend API for GOAL"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2.0",
    "cryptography>=44,<46",
    "fastapi>=0.115,<1.0",
    "faster-whisper>=1.1,<2.0",
    "nvidia-cudnn-cu12>=9,<10",
    "google-auth[requests]>=2.30,<3.0",
    "httpx>=0.28,<1.0",
    "pgvector>=0.3,<1.0",
    "python-multipart>=0.0.20,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.7,<3.0",
    "pymupdf>=1.25,<2.0",
    "numpy>=2.0,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5,<3.0",
    "jsonschema>=4.24,<5.0",
    "openapi-spec-validator>=0.7,<1.0",
    "pytest>=8.3,<9.0",
    "pyyaml>=6.0,<7.0",
    "ruff>=0.9,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tbd"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
markers = [
    "unit: 외부 PostgreSQL 없이 실행하는 빠른 단위·계약 테스트",
    "integration: 격리된 임시 PostgreSQL이 필요한 통합 테스트",
    "contract: canonical OpenAPI와 현재 구현 endpoint의 부분 계약 테스트",
    "migration: 빈 PostgreSQL에서 Alembic upgrade·downgrade를 검증하는 테스트",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]
